manifest/baseline/01_ns.yaml
# baseline/ns.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: job
