manifest/baseline/ns.yaml
# baseline/ns.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: backend
